--- a/scripts/install
+++ b/scripts/install
@@ -43,7 +43,7 @@ app=$YNH_APP_INSTANCE_NAME
 ynh_print_info --message="Validating installation parameters..."
 
 final_path=/var/www/$app
-test ! -e "$final_path" || ynh_die "This path already contains a folder"
+test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
@@ -70,7 +70,7 @@ ynh_app_setting_set --app=$app --key=admin_email --value=$admin_email
 ynh_print_info --message="Configuring firewall..."
 
 # Find a free port
-port=$(ynh_find_port 8095)
+port=$(ynh_find_port --port=8095)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
@@ -80,7 +80,7 @@ ynh_print_info --message="Installing dependencies..."
 
 ynh_install_app_dependencies $pkg_dependencies
 
-ynh_install_nodejs 10
+ynh_install_nodejs --nodejs_version="10"
 
 ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key='https://dl.yarnpkg.com/debian/pubkey.gpg'
 
@@ -222,6 +222,12 @@ chown -R "$app":"$app" "$final_path"
 yunohost service add $app --description "$app daemon for Mobilizon"
 
 #=================================================
+# START SYSTEMD SERVICE
+#=================================================
+
+ynh_systemd_action --service_name=$app --action="start" --log_path=systemd --line_match="Access MobilizonWeb.Endpoint at"
+
+#=================================================
 # SETUP SSOWAT
 #=================================================
 ynh_print_info --message="Configuring SSOwat..."
@@ -238,13 +244,7 @@ fi
 #=================================================
 ynh_print_info --message="Reloading nginx web server..."
 
-systemctl reload nginx
-
-#=================================================
-# START SERVICE
-#=================================================
-
-ynh_systemd_action --action=start --service_name=$app --log_path=systemd --line_match="Access MobilizonWeb.Endpoint at"
+ynh_systemd_action --service_name=nginx --action=reload
 
 #=================================================
 # END OF SCRIPT
