--- a/scripts/install
+++ b/scripts/install
@@ -24,6 +24,7 @@ ynh_abort_if_errors
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
 
+warning=$YNH_APP_ARG_WARNING
 domain=$YNH_APP_ARG_DOMAIN
 path_url="/"
 admin=$YNH_APP_ARG_ADMIN
@@ -44,6 +45,12 @@ ynh_print_info --message="Validating installation parameters..."
 
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
+
+# Don't install Mobilizon i
+if [ $warning -eq 0 ]
+then
+    ynh_die --message="You haven't read the warning, Mobilizon won't be installed"
+fi
 
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
