--- a/scripts/install
+++ b/scripts/install
@@ -46,7 +46,7 @@ ynh_print_info --message="Validating installation parameters..."
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
-# Don't install Mobilizon i
+# Don't install Mobilizon if warning not validated
 if [ $warning -eq 0 ]
 then
     ynh_die --message="You haven't read the warning, Mobilizon won't be installed"
