--- a/scripts/install
+++ b/scripts/install
@@ -188,6 +188,9 @@ pushd $final_path/$app
     sudo -u "$app" MIX_ENV=prod mix phx.digest
 popd
 
+# Modify log level
+ynh_replace_string --match_string="#config :logger" --replace_string="config :logger" --target_file="$final_path/$app/config/prod.exs"
+
 curl http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz --output GeoLite2-City.tar.gz -s && tar zxf GeoLite2-City.tar.gz && mkdir -p /usr/share/GeoIP && mv GeoLite2-City_*/GeoLite2-City.mmdb $final_path/$app/priv/data/GeoLite2-City.mmdb
 
 #=================================================
