--- a/scripts/install
+++ b/scripts/install
@@ -144,7 +144,7 @@ chown -R "$app":"$app" "$final_path"
 config="$final_path/$app/config/prod.secret.exs"
 
 pushd $final_path/$app/js
-    ynh_use_nodejs    
+    ynh_use_nodejs
     sudo -u $app env PATH=$PATH yarn install
     sudo -u $app env PATH=$PATH NODE_BUILD_MEMORY=1024 yarn run build
 popd
@@ -160,6 +160,7 @@ popd
 cat "../conf/ldap.exs" >> "$config"
 
 pushd $final_path/$app
+    chown o-rwx $config
     ynh_secure_remove --file="/tmp/setup_db.psql"
     sudo -u "$app" MIX_ENV=prod mix ecto.migrate
     sudo -u "$app" MIX_ENV=prod mix mobilizon.users.new "$admin_email" --admin --password "$password"
