--- a/scripts/install
+++ b/scripts/install
@@ -45,6 +45,8 @@ test ! -e "$final_path" || ynh_die --message="This path already contains a folde
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
+[ -n "$admin_email" ] || ynh_die --message="Did not found the email address for the admin user ?"
+
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
