Fix weird stuff about firewall

--- a/scripts/install
+++ b/scripts/install
@@ -63,7 +63,7 @@ ynh_app_setting_set --app=$app --key=ynh_user_password --value=$ynh_user_passwor
 #=================================================
 # FIND AND OPEN A PORT
 #=================================================
-ynh_script_progression --message="Configuring firewall..."
+ynh_script_progression --message="Finding an available port..."
 
 # Find an available port
 port=$(ynh_find_port --port=8095)
