--- a/scripts/install
+++ b/scripts/install
@@ -138,7 +138,7 @@ yunohost user update ${app}_notifs --add-mailalias $app@$domain --add-mailforwar
 #=================================================
 # MAKE SETUP
 #=================================================
-ynh_script_progression --message="Making setup..."
+ynh_script_progression --message="Installing dependencies and building app..." --weight=5
 
 # Give permission to the final_path
 chown -R "$app":"$app" "$final_path"
@@ -147,10 +147,13 @@ config="$final_path/$app/config/prod.secret.exs"
 
 pushd $final_path/$app/js
     ynh_use_nodejs
+    ynh_print_info --message="Installing dependencies (this is going to take a while...)"
     sudo -u $app env PATH=$PATH yarn install
+    ynh_print_info --message="Building application (this is going to take a while...)"
     sudo -u $app env PATH=$PATH NODE_BUILD_MEMORY=1024 yarn run build
 popd
 
+ynh_print_info --message="Configuring Mobilizon..."
 pushd $final_path/$app
     sudo -u "$app" MIX_ENV=prod mix local.hex --force
     sudo -u "$app" MIX_ENV=prod mix local.rebar --force
