--- a/scripts/install
+++ b/scripts/install
@@ -121,7 +121,7 @@ ynh_setup_source --dest_dir="$final_path/$app"
 
 chmod 750 "$final_path"
 chmod -R o-rwx "$final_path"
-chown -R root:$app "$final_path"
+chown -R $app:$app "$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
@@ -175,6 +175,9 @@ pushd $final_path/$app
 popd
 
 ynh_store_file_checksum --file="$config"
+
+chmod 400 "$config"
+chown $app:$app "$config"
 
 #=================================================
 # SETUP SYSTEMD
