--- a/scripts/install
+++ b/scripts/install
@@ -121,7 +121,7 @@ ynh_setup_source --dest_dir="$final_path/$app"
 
 chmod 750 "$final_path"
 chmod -R o-rwx "$final_path"
-chown -R $app:$app "$final_path"
+chown -R $app:www-data "$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
