--- a/scripts/install
+++ b/scripts/install
@@ -199,6 +199,8 @@ ynh_store_file_checksum --file="$config"
 chmod 400 "$config"
 chown $app:$app "$config"
 
+ynh_secure_remove --file="$final_path/.cache"
+
 #=================================================
 # SETUP SYSTEMD
 #=================================================
