--- a/scripts/install
+++ b/scripts/install
@@ -88,7 +88,7 @@ ynh_install_extra_app_dependencies --repo="deb http://packages.erlang-solutions.
 ynh_script_progression --message="Configuring system user..."
 
 # Create a system user
-ynh_system_user_create --username=$app --home_dir="$final_path"
+ynh_system_user_create --username=$app --home_dir=$final_path
 
 yunohost user create ${app}_notifs --firstname "Mobilizon" --lastname "Notifications" --mail ${app}_notifs@$domain --password "$ynh_user_password" -q 0
 yunohost user update ${app}_notifs --add-mailalias $app@$domain --add-mailforward $admin_email
@@ -134,17 +134,14 @@ ynh_add_nginx_config
 #=================================================
 # SPECIFIC SETUP
 #=================================================
-# CREATE THE DATA DIRECTORY
+# CREATE DATA DIRECTORY
 #=================================================
-ynh_script_progression --message="Creating the data directory..."
+ynh_script_progression --message="Creating a data directory..."
 
-# Define app's data directory
-datadir="/home/yunohost.app/${app}"
+datadir=/home/yunohost.app/$app
+ynh_app_setting_set --app=$app --key=datadir --value=$datadir
 
-ynh_app_setting_set --app=$app --key=datadir --value="$datadir"
-
-# Create app folders
-mkdir -p "$datadir/"
+mkdir -p $datadir
 mkdir -p "$datadir/uploads/"
 
 chmod 750 "$datadir"
