--- a/scripts/install
+++ b/scripts/install
@@ -30,6 +30,8 @@ is_public=$YNH_APP_ARG_IS_PUBLIC
 language=$YNH_APP_ARG_LANGUAGE
 admin_email=$(ynh_user_get_info $admin 'mail')
 ynh_user_password=$(ynh_string_random --length=30)
+architecture=$YNH_ARCH
+
 app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
@@ -75,18 +77,6 @@ ynh_script_progression --message="Installing dependencies..."
 
 ynh_exec_warn_less ynh_install_app_dependencies $pkg_dependencies
 
-ynh_install_nodejs --nodejs_version=$NODEJS_VERSION
-
-ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key='https://dl.yarnpkg.com/debian/pubkey.gpg'
-
-if dpkg --compare-versions $(cat /etc/debian_version) ge 11.0
-then
-    ynh_install_extra_app_dependencies --repo="deb http://packages.erlang-solutions.com/debian buster contrib" --package="$extra_pkg_dependencies" --key='https://packages.erlang-solutions.com/debian/erlang_solutions.asc'
-else
-    lsb_name="$(lsb_release --codename --short)"
-    ynh_install_extra_app_dependencies --repo="deb http://packages.erlang-solutions.com/debian $lsb_name contrib" --package="$extra_pkg_dependencies" --key='https://packages.erlang-solutions.com/debian/erlang_solutions.asc'
-fi
-
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
@@ -122,7 +112,7 @@ ynh_script_progression --message="Setting up source files..."
 
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$final_path/live"
+ynh_setup_source --dest_dir="$final_path/live" --source_id=$architecture
 
 chmod 750 "$final_path"
 chmod -R o-rwx "$final_path"
@@ -154,68 +144,51 @@ chmod -R o-rwx "$datadir"
 chown -R $app:$app "$datadir"
 
 #=================================================
-# MAKE SETUP
-#=================================================
-ynh_script_progression --message="Installing dependencies and building app..." --weight=5
-
-config="$final_path/live/config/runtime.exs"
-
-pushd $final_path/live/js
-	ynh_use_nodejs
-	ynh_script_progression --message="Installing NodeJS dependencies (this is going to take a while...)"
-	ynh_exec_warn_less sudo -u $app env PATH=$PATH yarn install
-	ynh_script_progression --message="Building NodeJS application (this is going to take a while...)"
-	ynh_exec_warn_less sudo -u $app env PATH=$PATH NODE_BUILD_MEMORY=1024 yarn run build
-popd
-
-ynh_secure_remove --file="$final_path/live/js"
-
-ynh_script_progression --message="Building Elixir application (this is going to take a while...)"
-pushd $final_path/live
-	sudo -u "$app" MIX_ENV=prod mix local.hex --force
-	sudo -u "$app" MIX_ENV=prod mix local.rebar --force
-	ynh_exec_warn_less sudo -u "$app" MIX_ENV=prod mix deps.get
-	ynh_exec_warn_less sudo -u "$app" MIX_ENV=prod mix compile
-	sudo -u "$app" MIX_ENV=prod mix mobilizon.instance gen --force --output $config --output-psql /tmp/setup_db.psql --domain $domain --instance-name "Mobilizon" --admin-email "$app@$domain" --dbhost localhost --dbname $db_name --dbuser $db_user --dbpass $db_pwd --listen-port $port
-popd
-
-cat "../conf/ldap.exs" >> "$config"
-cat "../conf/mail.exs" >> "$config"
-ynh_replace_string --match_string="__DATADIR__" --replace_string="$datadir" --target_file="../conf/uploads.exs"
-cat "../conf/uploads.exs" >> "$config"
-
-chmod 750 "$datadir"
-chmod -R o-rwx "$datadir"
-chown -R $app:$app "$datadir"
-
-pushd $final_path/live
-	chmod o-rwx $config
-	ynh_replace_string --match_string="__YNH_USER__" --replace_string="${app}_notifs" --target_file="$config"
-	ynh_replace_string --match_string="__YNH_USER_PASSWORD__" --replace_string="${ynh_user_password}" --target_file="$config"
-	# Compile *again* because we added ldap conf in between... dunno if the first is relevant
-	sudo -u "$app" MIX_ENV=prod mix compile
-	ynh_secure_remove --file="/tmp/setup_db.psql"
-	sudo -u "$app" MIX_ENV=prod mix ecto.migrate
-
-	# We generate a dummy password ... this will actually *not* be used because the admin is supposed to connect via the ldap
-	password=$(ynh_string_random --length=30)
-	sudo -u "$app" MIX_ENV=prod mix mobilizon.users.new "$admin_email" --admin --password "$password"
-popd
-
-ynh_secure_remove --file="$final_path/.cache"
-
-ynh_store_file_checksum --file="$config"
-
-chmod 400 "$config"
-chown $app:$app "$config"
-
-#=================================================
 # SETUP SYSTEMD
 #=================================================
 ynh_script_progression --message="Configuring a systemd service..."
 
 # Create a dedicated systemd config
 ynh_add_systemd_config
+
+#=================================================
+# MAKE SETUP
+#=================================================
+ynh_script_progression --message="Making setup..."
+
+mkdir -p /etc/$app
+chown -R $app:$app /etc/$app
+
+config="/etc/$app/config.exs"
+
+pushd $final_path/live
+	ynh_exec_as $app MIX_ENV=prod ./bin/mobilizon_ctl instance gen --force --output $config --output-psql /tmp/setup_db.psql --domain $domain --instance-name "Mobilizon" --admin-email "$app@$domain" --dbhost localhost --dbname $db_name --dbuser $db_user --dbpass $db_pwd --listen-port $port
+	ynh_secure_remove --file="/tmp/setup_db.psql"
+popd
+
+cat "../conf/ldap.exs" >> "$config"
+ynh_replace_string --match_string="__YNH_USER__" --replace_string="${app}_notifs" --target_file="../conf/mail.exs"
+ynh_replace_string --match_string="__YNH_USER_PASSWORD__" --replace_string="${ynh_user_password}" --target_file="../conf/mail.exs"
+cat "../conf/mail.exs" >> "$config"
+ynh_replace_string --match_string="__DATADIR__" --replace_string="$datadir" --target_file="../conf/uploads.exs"
+cat "../conf/uploads.exs" >> "$config"
+
+ynh_store_file_checksum --file="$config"
+
+chmod 400 "$config"
+chown $app:$app "$config"
+
+pushd $final_path/live
+	ynh_exec_as $app ./bin/mobilizon_ctl migrate
+
+	ynh_systemd_action --service_name=$app --action="start" --log_path=systemd --line_match="Access Mobilizon.Web.Endpoint at"
+
+	# We generate a dummy password ... this will actually *not* be used because the admin is supposed to connect via the ldap
+	password=$(ynh_string_random --length=30)
+	ynh_exec_as $app ./bin/mobilizon_ctl users.new "$admin_email" --admin --password "$password"
+
+	ynh_systemd_action --service_name=$app --action="stop" --log_path=systemd --line_match="Stopped"
+popd
 
 #=================================================
 # GENERIC FINALIZATION
